--- a/opmaaklrs.css
+++ b/opmaaklrs.css
@@ -40,3 +40,56 @@ button{
 button:hover {
     opacity: 0.5;
 }
+/*Opmaak popup*/
+.popupnaam{
+                position: relative;
+                z-index: 9;
+                top:-90%;
+                margin-left: 50%;
+                border: 1px solid red;
+                background-color: #ffff99;
+                border-radius: 8px;
+                width: 390px;
+                height: 380px;
+                box-shadow: 10px 10px black;             
+            }
+            #testvak{
+                box-sizing: border-box;
+                display: inline-block;
+                height: 250px;
+                width: 250px;             
+                padding: 20px;              
+            }
+            body {
+               
+                padding: 20px;
+            }
+            
+/*            img{
+                border: 4px solid red;
+                width: 100%;
+                Height: 100%;              
+            }
+            
+            img:hover{
+               border: 4px solid black;  
+               opacity: .5;                           
+            }*/
+            .classafb{
+                height: 20%;
+                width: 20%;
+                margin: 5px;
+                border-radius: 10px;
+                border: 2px solid red;  
+                
+            }
+            form{
+                padding:5px;
+            }
+            
+            input{
+                height: 30px;
+                margin: 5px;
+                padding: 2px;
+            }
+/*            end opmaak button*/
