--- a/opmaaklrs.css
+++ b/opmaaklrs.css
@@ -19,6 +19,7 @@ header{
 nav{
     height:30px;
     background-color: grey;
+    border-radius: 10px;
 }
 .zoek{
     background-color: blue;
@@ -27,7 +28,15 @@ nav{
 
 footer{
     background-color: grey;
-    height:60px;
+    height:10px;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 1px;
+    left: 30px;
+    right: 30px;
+    text-align: center;
+    padding: 10px;
+  
 }
 
 button{
