--- a/opmaaklrs.css
+++ b/opmaaklrs.css
@@ -1,7 +1,7 @@
 .leerling 
 {
     display:inline-block;
-### uitgesterd door gerard 14 jan 2018   height: 80%;   
+/*    //uitgesterd door gerard 14 jan 2018   height: 80%;   */
 
 }
 
@@ -27,7 +27,7 @@ nav{
     display:inline-block;
     background-color: blue;
     width: 20%;
-    
+
 }
 
 footer{
@@ -47,7 +47,7 @@ footer{
     float: left;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 2px;
     background-color: cornflowerblue;
     color: white;
     padding: 14px 20px;
@@ -84,7 +84,7 @@ button:hover {
 body {
 
     padding: 20px;
-    background-image:url('scificlass.jpg');
+    background: linear-gradient(rgba(0,0,128,0.7), rgba(128,128,128,0.3));
 
 }
 
@@ -113,27 +113,27 @@ header nav{
 }
 
 header nav ul{
-   float: left;
+    float: left;
 }
 
 header nav ul li{
-   float: left;
-   list-style: none;
+    float: left;
+    list-style: none;
     margin-right: 30px;
 }
 
 header nav ul li a{
-   font-family: arial;
-   font-size: 16px;
-   color: #111;
-   line-height: 63px;
+    font-family: arial;
+    font-size: 16px;
+    color: #111;
+    line-height: 63px;
 }
 
 .classafb{
     height: 20%;
     width: 20%;
     margin: 5px;
-    border-radius: 10px;
+    border-radius: 3px;
     border: 2px solid red;  
 
 }
@@ -149,13 +149,13 @@ input{
 /*            end opmaak button*/
 
 .klas{
-width: 80%;
+    width: 80%;
 
 }
 
 img{
     border: 1px solid red;
-    border-radius: 10px;
+    border-radius: 3px;
     width: 130px;
     margin: 5px;
     object-fit: contain
