--- a/opmaaklrs.css
+++ b/opmaaklrs.css
@@ -17,11 +17,11 @@
     text-align: center;
 }*/
 
-nav{
+/*nav{
     height:30px;
     background-color: grey;
     border-radius: 10px;
-}
+}*/
 
 .zoek{
     display:inline-block;
@@ -93,15 +93,32 @@ body {
 
 /*navigatie balk*/
 
+a {
+    text-decoration: none;
+}
+
 .main-wrapper{
     margin: 0 auto;
     width: 1000px;
 }
+.main-container {
+    padding-top: 0px;
+}
+
+.main-container h1 {
+    font-family: arial;
+    font-size: 40px;
+    color: #111;
+    line-height: 80px;
+    text-align: center;
+}
 
 header nav{
     width: 100%;
-    height: 60px;
+    height: 170px;
     background-color: #fff;
+    border-radius: 10px;
+    
 }
 
 header nav ul{
@@ -112,6 +129,7 @@ header nav ul li{
    float: left;
    list-style: none;
     margin-right: 30px;
+    margin-bottom: 20px;
 }
 
 header nav ul li a{
