--- a/opmaaklrs.css
+++ b/opmaaklrs.css
@@ -1,7 +1,7 @@
 .leerling 
 {
     display:inline-block;
-    height: 80%;
+/*    //uitgesterd door gerard 14 jan 2018   height: 80%;   */
 
 }
 
@@ -27,7 +27,7 @@
     display:inline-block;
     background-color: blue;
     width: 20%;
-    
+
 }
 
 footer{
@@ -43,11 +43,19 @@ footer{
 
 }
 
-button{
+#newstudent{
+    float: left;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
-    background-color: powderblue;
+    border-radius: 2px;
+    background-color: cornflowerblue;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    box-shadow: 10px 10px 5px #888888;
 }
 
 button:hover {
@@ -76,7 +84,7 @@ button:hover {
 body {
 
     padding: 20px;
-    background-image:url('scificlass.jpg');
+    background: linear-gradient(rgba(0,0,128,0.7), rgba(128,128,128,0.3));
 
 }
 
@@ -122,28 +130,28 @@ header nav{
 }
 
 header nav ul{
-   float: left;
+    float: left;
 }
 
 header nav ul li{
-   float: left;
-   list-style: none;
+    float: left;
+    list-style: none;
     margin-right: 30px;
     margin-bottom: 20px;
 }
 
 header nav ul li a{
-   font-family: arial;
-   font-size: 16px;
-   color: #111;
-   line-height: 63px;
+    font-family: arial;
+    font-size: 16px;
+    color: #111;
+    line-height: 63px;
 }
 
 .classafb{
     height: 20%;
     width: 20%;
     margin: 5px;
-    border-radius: 10px;
+    border-radius: 3px;
     border: 2px solid red;  
 
 }
@@ -159,15 +167,15 @@ input{
 /*            end opmaak button*/
 
 .klas{
-width: 80%;
+    width: 80%;
 
 }
 
 img{
     border: 1px solid red;
-    border-radius: 10px;
-    width: 87px;
-    height: 87px;
+    border-radius: 3px;
+    width: 130px;
     margin: 5px;
+    object-fit: contain
 }
 
